--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: MacroData
-subtitle: Metodos en Macrovolución de la Ciencia de Datos
+subtitle: Cursos breves y recursos sobre metodos en macrovolución y ciencia de datos (2025–2026)
 ---
